# EssaCalc

./: .gitignore  CMakeLists.txt
EssaMath/: CMakeLists.txt
EssaMath/cmake/: LibraryConfig.cmake
EssaMath/include/: Defines.hpp  EssaMath.hpp  Expression.hpp  ExpressionGenerator.hpp  ExpressionHelper.hpp  ExpressionNodes.hpp  FunctionUtils.hpp  Functions.hpp  Generator.hpp  Lexer.hpp  NodeAllocator.hpp  Numeric.hpp  OperatorHelpers.hpp  Operators.hpp  Parser.hpp  ParserHelpers.hpp  ParserRtl.hpp  SymbolTable.hpp  Token.hpp
EssaMath/src/cxx/: Defines.cpp  ExpressionGenerator.cpp  Faddeeva.cpp  FunctionUtils.cpp  Generator.cpp  Lexer.cpp  LispApi.cpp  OpeeratorHelpers.cpp  Parser.cpp  Token.cpp
EssaMath/src/lisp/: init-cl.lisp  rmaxima  simp.lisp
Tests/cxx/: CMakeLists.txt  main.cpp
share/: Makefile  Makefile.in
share/contrib/: Makefile  Makefile.in
share/contrib/integration/: Makefile  Makefile.in
share/contrib/maxima-odesolve/: Makefile  Makefile.in
share/contrib/symplectic_ode/: Makefile  Makefile.in
share/draw/: Makefile  Makefile.in
share/logic/: Makefile  Makefile.in
share/nelder_mead/: Makefile  Makefile.in
src/cxx/: Expression.cpp  Expression.hpp  LispApi.cpp  LispApi.hpp  main.cpp
src/cxx/EsssaMath/: Defines.hpp  EssaMath.hpp  Expression.cpp  Expression.hpp  ExpressionHelper.hpp  ExpressionNodes.hpp  FunctionUtils.cpp  FunctionUtils.hpp  Functions.hpp  Generator.hpp  Lexer.hpp  (+18 more)
src/lisp/: Makefile  Makefile.in  autoconf-variables.lisp  clisp-depends.mk.tmp  init-cl.lisp  maxima  maxima.bat  mload.lisp  simp.lisp  startmaxima_abcl.sh
